--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
-name = "customer-writer"
+name = "transmission"
 version = "0.2.0"
 authors = ["Peter Farr <Peter@PrismaPhonic.com>, Liz van Dijk <lizztheblizz@gmail.com>, Abhi Vaidyanatha <abhivaidyanatha@gmail.com>"]
-edition = "2018"
+edition = "2020"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
